--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Mass Outbreak
 description: Outbreak Information
 google_analytics: UA-55410934-1
 show_downloads: true
-theme: jekyll-theme-slate
+theme: jekyll-theme-tactile
 
 gems:
   - jekyll-mentions
