--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Mass Outbreak
 description: Outbreak Information
 google_analytics: UA-55410934-1
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-tactile
 
 gems:
